# Robosim

./: BUILD_FIX_LOG.md  CMakeLists.txt  README.md
config/: default.yaml
examples/: basic_sim.cpp  train_ppo.py
include/robosim/ai/: onnx_inference.h
include/robosim/checkpoint/: state_snapshot.h
include/robosim/config/: config_manager.h  config_node.h
include/robosim/core/: actuator.h  contact.h  joint.h  link.h  robot.h  simulator.h  world.h
include/robosim/env/: action_space.h  environment.h  observation_space.h
include/robosim/logging/: data_logger.h
include/robosim/parallel/: env_pool.h  thread_pool.h
include/robosim/physics/: bullet_world.h
include/robosim/randomization/: domain_randomizer.h
include/robosim/render/: camera.h  gui.h  headless_renderer.h  mesh.h  opengl_renderer.h  renderer.h  shader.h
include/robosim/reward/: composite_reward.h  reward_function.h
include/robosim/reward/rewards/: locomotion_rewards.h
include/robosim/robot/: robot_factory.h
include/robosim/robot/definitions/: arm_def.h  drone_def.h  humanoid_def.h  mobile_def.h  quadruped_def.h
include/robosim/sensor/: contact_sensor.h  imu.h  joint_encoder.h  lidar.h  sensor.h
include/robosim/task/: task.h
include/robosim/task/tasks/: all_tasks.h
include/robosim/terrain/: heightfield.h  terrain.h
include/robosim/terrain/terrains/: all_terrains.h
python/: robosim_bindings.cpp
python/robosim/: __init__.py  env.py
shaders/: basic.frag  basic.vert  grid.frag  grid.vert
src/: main.cpp
src/ai/: onnx_inference.cpp
src/checkpoint/: checkpoint_manager.cpp
src/config/: config_manager.cpp  config_node.cpp
src/core/: robot.cpp  simulator.cpp
src/env/: environment.cpp
src/logging/: data_logger.cpp
src/parallel/: env_pool.cpp  thread_pool.cpp
src/physics/: bullet_world.cpp
src/render/: camera.cpp  gui.cpp  mesh.cpp  opengl_renderer.cpp  shader.cpp
src/reward/: reward_registry.cpp
src/robot/: robot_factory.cpp
src/robot/definitions/: arm_def.cpp  drone_def.cpp  humanoid_def.cpp  mobile_def.cpp  quadruped_def.cpp
src/task/: task_registry.cpp
src/terrain/: heightfield.cpp  terrain_factory.cpp
